Fix issue where action buttons are wrapping in small viewports. In progress.

--- a/src/components/AccountOverview/AccountInfoCard/AccountInfoCard.module.scss
+++ b/src/components/AccountOverview/AccountInfoCard/AccountInfoCard.module.scss
@@ -117,6 +117,9 @@
         line-height: 14px;
         max-width: none;
         width: 100%;
+        svg {
+          //display: none;
+        }
       }
     }
   }
